# py-caching

./: .flake8  .gitignore  pyproject.toml
docs/: index.rst
examples/: hello.py
pycaching/: __init__.py  const.py  main.py  response.py  utils.py
pycaching/backends/: __init__.py  filesystemcache.py  memcache.py  nullcache.py  rediscache.py  simplecache.py
tests/: conftest.py  test_backend_cache.py  test_basic_app.py  test_cache.py  test_memoize.py  test_view.py
