[tool.poetry]
name = "py-caching"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "py_caching"}]

[tool.poetry.dependencies]
python = "^3.10"
redis = "^4.5.1"
requests = "^2.28.2"
cachelib = "^0.10.2"
pylibmc = "^1.6.3"


[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"
black = "^23.1.0"
flake8 = "^6.0.0"
ruff = "^0.0.254"
types-redis = "^4.5.1.4"
pytest = "^7.2.2"
types-requests = "^2.28.11.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
